Removed height% to avoid scrollbar

--- a/smartmat/src/assets/style/register.css
+++ b/smartmat/src/assets/style/register.css
@@ -1,6 +1,3 @@
-
-
-
 input{
     width: 100%;
     margin: auto;
@@ -74,7 +71,6 @@ input{
         text-align: center;
         border: 1vh solid #fafffa;
         font-size: 3vh;
-        height: 60%;
         width: 80%;
         font-family: Hack, monospace;
         border-radius: 2vh;
@@ -89,7 +85,6 @@ input{
         text-align: center;
         border: 1vh solid #fafffa;
         font-size: 3vh;
-        height: 60%;
         width: 80%;
         margin: 15% auto auto;
         font-family: Hack, monospace;
